@@ -1,3 +1,8 @@
+2000-02-10  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* poe.el (replace-match): Redefined to add `STRING' optional
+	argument.
+
 2000-02-07  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* poe-18.el (mod): Define as an alias for `%'.
@@ -33,7 +38,7 @@
 	`TIMEOUT-MSECS' optional arguments.
 	(get-buffer-window): Redefined to add `FRAME' optional argument.
 
-	* poe.el (completing-read): Redifined to adjust optional arguments
+	* poe.el (completing-read): Redefined to adjust optional arguments
 	for some emacsen.
 
 2000-01-31  Mikio Nakajima  <minakaji@osaka.email.ne.jp>
